Fix text align in article detail page

--- a/src/app/modules/article/article-detail/article-detail.component.scss
+++ b/src/app/modules/article/article-detail/article-detail.component.scss
@@ -1,5 +1,5 @@
 .content {
   p {
-    @apply mt-6 p-4 text-center text-base lg:text-xl font-sans;
+    @apply mt-6 p-4 text-base lg:text-xl font-sans;
   }
 }
